--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -1,5 +1,5 @@
 /* "Brink" by Valerio Lyndon
- * Version 2.0.0
+ * Version 2.0.1
  * 
  * = TABLE OF CONTENTS =
  * 
@@ -1584,6 +1584,7 @@ div[class^="icon-watch"] {
 	overflow-y: auto;
 	color: hsl(var(--text)) !important;
 	font-size: 12px;
+	text-shadow: none;
 	text-align: left;
 	opacity: 0;
 	cursor: text;
