--- a/Brink Theme/modAllowTagOverflow.css
+++ b/Brink Theme/modAllowTagOverflow.css
@@ -1,5 +1,5 @@
 /*------------------------------*\
-|*  Allow Tag Overflow  v1.0.2  *|
+|*  Allow Tag Overflow  v1.0.3  *|
 \* - - - - - - - - - - - - - - -*/
 
 .data.tags {
@@ -19,7 +19,6 @@
 	transition:
 		color var(--timeText) var(--bezierFast),
 		opacity calc(var(--timeItem) * 1.5) var(--bezierFast);
-} .list-item:hover .data.tags a,
-.list-item:focus-within .data.tags a {
+} .list-item:hover .data.tags a {
 	opacity: 1;
 }
