Allow Tag Overflow v1.1.0 Layering Change
Tag mods were not layering very well. Didn't test how much of that was to do with Brink v2.0.0 but either way, this change makes all tags layer above all other data on the list items which is a change from before.

--- a/Brink Theme/modAllowTagOverflow.css
+++ b/Brink Theme/modAllowTagOverflow.css
@@ -1,8 +1,9 @@
 /*------------------------------*\
-|*  Allow Tag Overflow  v1.0.3  *|
+|*  Allow Tag Overflow  v1.1.0  *|
 \* - - - - - - - - - - - - - - -*/
 
 .data.tags {
+	z-index: 10;
 	overflow: initial;
 	opacity: 1;
 }
