Clarified v2.1.0 Better Notes
Notes were long overdue for a proper styling. The only reason it took me so long is that I thought I already had... lol.

+ Edit/add notes buttons are now distinct.
+ Notes can be selected as normal text.
+ Fixed notes using hardcoded default colours, also fixes text contrast issues.

--- a/Clarified Theme/Clarified.css
+++ b/Clarified Theme/Clarified.css
@@ -1,6 +1,6 @@
 /**
  * "Clarified" by Valerio Lyndon
- * v2.0.12
+ * v2.1.0
  * 
 ***TABLE*OF*CONTENTS***
  * 
@@ -29,6 +29,7 @@
  @ Image
  @ Type
  @ Title
+ @ Notes
  @ Score
  @ Progress
  @ Priority
@@ -1225,19 +1226,50 @@ tr.list-table-data {
 
 .list-table .list-table-data .data.title :is(.rewatching, .rereading,.content-status) {
 	float: left;
+	clear: both;
 	color: var(--content-text);
 	font-style: italic;
 }
 
-/* Notes */
+/*---------
+  @Notes
+  ---------*/
 
 .notes {
 	width: 100% !important;
-	clear: left;
+	clear: both;
+	cursor: text;
 }
 
 .notes .text:not(:empty) {
 	padding: 3px 0;
+	color: var(--subdued-text) !important;
+	pointer-events: none;
+}
+[data-owner="1"] .notes .text:empty {
+	padding-top: 1px;
+}
+
+.notes .edit,
+[data-owner="1"] .notes .text:not(:empty)::after {
+	display: block;
+	padding: 1px 4px;
+	width: fit-content;
+	background: var(--button);
+	border-radius: 3px;
+	margin-top: 2px;
+	color: var(--content-text) !important;
+	font-size: 11px !important;
+	cursor: pointer;
+}
+[data-owner="1"] .notes .text:not(:empty)::after {
+	content: "Edit notes";
+	pointer-events: auto;
+}
+.notes .edit:hover,
+[data-owner="1"] .notes .text:hover:not(:empty)::after{
+	color: var(--content-link) !important;
+	text-decoration: underline;
 }
 
 
@@ -2207,6 +2239,7 @@ body[data-query*='"status":6'] {
 		--border: #cec8ce;
 		--content-text: var(--neutral);
 		--content-link: var(--myanimelist-blue);
+		--subdued-text: #767676;
 		--inverse-background: var(--neutral);
 		--inverse-text: #fff;
 		--scroll-thumb: var(--border);
@@ -2235,6 +2268,7 @@ body[data-query*='"status":6'] {
 		--border: var(--neutral);
 		--content-text: #ababab;
 		--content-link: var(--myanimelist-blue);
+		--subdued-text: #888;
 		--inverse-background: var(--myanimelist-blue);
 		--inverse-text: var(--neutral);
 		--scroll-thumb: var(--myanimelist-blue);
