Agile v1.0.2 Background colour fix
Fix issue with the background colour caused by the recent update to MyAnimeList.

--- a/Agile Theme/Agile.css
+++ b/Agile Theme/Agile.css
@@ -1,6 +1,6 @@
 /* 
 "Agile" by Valerio Lyndon
-v1.0.1
+v1.0.2
 
 * CONTENTS *
 use ctrl+f to find sections
@@ -138,7 +138,7 @@ html {
 }
 
 body {
-	background: var(--i-background) no-repeat center / cover fixed var(--c-background);
+	background: var(--i-background) no-repeat center / cover fixed var(--c-background) !important;
 	color: var(--c-text);
 	font-size: 13rem;
 }
