Update google fonts to v2

--- a/9anime Theme/Theme.css
+++ b/9anime Theme/Theme.css
@@ -1,6 +1,6 @@
 /* "9anime Adaption" by Valerio Lyndon / Revision 0.7 */
 
-@\import "https://fonts.googleapis.com/css?family=Roboto:400,500,700";
+@\import "https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap";
 
 /* BASE */
 
