--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -67,7 +67,7 @@
   !IMPORTS
 \*------------------------------*/
 
-@\import "https://fonts.googleapis.com/css?family=Sarabun:400,700";
+@\import "https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap";
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/resources/font-awesome-4.7.0/css/font-awesome-force-legacy.min.css";
 
 
