--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -67,7 +67,7 @@
   !IMPORTS
 \*==============================*/
 
-@\import "https://fonts.googleapis.com/css?family=Oswald";
+@\import "https://fonts.googleapis.com/css2?family=Oswald&display=swap";
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/resources/font-awesome-4.7.0/css/font-awesome-force-legacy.min.css";
 
 
