--- a/Puni Theme/Puni.css
+++ b/Puni Theme/Puni.css
@@ -4,7 +4,7 @@
 |* v1.2.0                  *|
 \* * * * * * * * * * * * * */
 
-@\import "https://fonts.googleapis.com/css?family=Varela+Round";
+@\import "https://fonts.googleapis.com/css2?family=Varela+Round&display=swap";
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~*\
   !VARIABLES
