--- a/Kure Theme/Kure.css
+++ b/Kure Theme/Kure.css
@@ -5,7 +5,7 @@
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /* IMPORTS */
-@\import "https://fonts.googleapis.com/css?family=Muli:400,700|Playball";
+@\import "https://fonts.googleapis.com/css2?family=Muli:wght@400;700&family=Playball&display=swap";
 
 /* VARIABLES */
 
