--- a/Tilt Theme/Theme.css
+++ b/Tilt Theme/Theme.css
@@ -49,7 +49,7 @@
   !IMPORTS
 \*==============================*/
 
-@\import "https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Open+Sans:400,700";
+@\import "https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Open+Sans:wght@400;700&display=swap";
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/resources/font-awesome-4.7.0/css/font-awesome-force-legacy.min.css";
 
 
